--- a/login.html
+++ b/login.html
@@ -14,6 +14,7 @@
                 <label>Password</label><br>
                 <input type="password"><br>
                 <button>Log in</button>
+                <button>Logout</button>
             </form>
         </div>     
     </body>
