Membuat action logout ke halaman login.html

--- a/home.html
+++ b/home.html
@@ -15,9 +15,8 @@
                     <li><a href="">Portofolio</a></li>
                     <li><a href="">Blog</a></li>
                     <li><a href="">Contact</a></li>
-                    <li><button>Logout</button></li>   
+                    <a href="login.html" >Logout</a> 
                 </ul>
-
             </nav>
         </div>
         <main class="content">
@@ -37,7 +36,6 @@
                 <li><img src="facebook.png" alt=""><p>Facebook</p></a></li>
                 <li><img src="twitter.png" alt=""><p>Twitter</p></a></li>
                 <li><img src="telegram.png" alt=""><p>Telegram</p></a></li>
-
             </ul>
             </footer>
         </div>
