Menambah form action di file login.html

--- a/login.html
+++ b/login.html
@@ -13,7 +13,9 @@
                 <input type="text"><br>
                 <label>Password</label><br>
                 <input type="password"><br>
-                <button href="home.html">Log in</button>
+            </form>
+            <form method="post" action="home.html.html">
+                <button type="submit">Login</button>
             </form>
         </div>     
     </body>
