--- a/login.html
+++ b/login.html
@@ -13,9 +13,7 @@
                 <input type="text"><br>
                 <label>Password</label><br>
                 <input type="password"><br>
-            </form>
-            <form method="post" action="home.html.html">
-                <button type="submit">Login</button>
+                <button href="home.html">Log in</button>
             </form>
         </div>     
     </body>
