--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
                 <input type="text"><br>
                 <label>Password</label><br>
                 <input type="password"><br>
-                <button href="home.html">Log in</button>
+                <button><a href="home.html" >Log in</a></button>
             </form>
         </div>     
     </body>
