--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Collab Pi</title>
+    <title>Tugas Collab Pi</title>
 </head>
 <body>
     <div class="container2">
@@ -23,8 +23,8 @@
               <section class="hero">
                   <img src="online.png" alt="">
               <div class="hero-content">
-                  <h1>Profesi</h1><br></h2>Junior Content Writer at Dicoding</h2><br><br>   
-<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, aperiam dolore assumenda velit repellendus recusandae magni consectetur mollitia facere incidunt inventore perspiciatis  debitis doloribus ullam minima culpa voluptatem. Repellendus, option.</p>
+                  <h1>Profesi</h1><br></h2>Belajar Kolaborai menggunakan github</h2><br><br>   
+<p>Tuugas ini dibuat untuk menyelesaikan tugas belajar kolaborasi project menggunakan Github .</p>
 <a href="" class="action-btn">Profile Saya</a>
               </div>
                 </section>
