--- a/home.html
+++ b/home.html
@@ -24,7 +24,7 @@
                   <img src="online.png" alt="">
               <div class="hero-content">
                   <h1>Profesi</h1><br></h2>Belajar Kolaborai menggunakan github</h2><br><br>   
-<p>Tuugas ini dibuat untuk menyelesaikan tugas belajar kolaborasi project menggunakan Github .</p>
+<p>Tugas ini dibuat untuk menyelesaikan tugas belajar kolaborasi project menggunakan Github .</p>
 <a href="" class="action-btn">Profile Saya</a>
               </div>
                 </section>
